# automation-agents

./: .env.production.example  .gitignore  .pre-commit-config.yaml  =2.8.0  AGENTS.md  ARCHITECTURE.md  BRAINSTORM_IMPLEMENTATION.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  MIGRATION.md  PINECONE.md  README.md  TASK_DETAILS_IMPLEMENTATION.md  TODO.md  agents.py  calendar.yaml  check_knowledge_base.py  check_specific_doc.py  configuration_env_storage_update.md  demo_brainstorm.py  demo_task_details.py  final_index_test.sh  index.html  index_docs.sh  knowledge_graph_plan_critiques.md  local.env.example  manual_index_dmt.py  notes.md  prompts.py  pyproject.toml  requirements-dev.txt  requirements.txt  rules.md  run.sh  run_all.sh  run_all_local.sh  run_all_oncloud.sh  run_editor_tests.py  run_legacy.py  (+14 more)
api/: index.py  telegram_agent.py  webhook.py
data/: daily_logs.yaml  meetings.yaml  tasks.md  tasks.yaml
dev-notes/: README.md  configuration_tab_summary.md  knowledge_graph_suggestions.md  log_deletion_fix_summary.md  task_brainstorms.md  verify_index_changes.md
docs/: CLOUD_SETUP_GUIDE.md  MULTI_COLLECTION_IMPLEMENTATION.md  SUPABASE_MIGRATION.md  brainstorm_improvements.md  brainstorm_setup.md  cloud_setup.md  contextual_rag_implementation.md  enhanced_rag_implementation.md  enhanced_rag_summary.md  final_plans.md  google_drive_vs_s3_implementation_plan.md  indexing_guide.md  indexing_issue_analysis.md  knowledge_graph_guide.md  knowledge_graph_integration_plan.md  knowledge_graph_usage_guide.md  multi_collection_architecture.md  multi_collection_rag_guide.md  neo4j_fixes_summary.md  planner_agent_spec.md  planner_date_handling.md  planner_documentation.md  planner_llm_refactor.md  telegram_bot_on_vercel_plan.md  telegram_bot_todo.md  telegram_setup.md
docs_sphinx/: Makefile
frontend/: .env.example  .eslintrc.cjs  FRONTEND_ARCHITECTURE.md  README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: add_user_id_to_documents.sql  brainstorm.md  check_indexed_content.py  cleanup_migration_scripts.py  create_user_settings_table.sql  diagnose_neo4j.py  disable_rls.sql  disable_vectors.py  fix_match_documents_function.sql  fix_neo4j_schema.py  fix_password_hashing.py  fix_table_schemas.sql  index_data.py  index_single_file.py  index_to_cloud.py  index_to_cloud_simple.py  init_cloud.py  migrate_documents_to_supabase.py  migrate_neo4j_to_cloud.py  migrate_to_multi_collection.py  migrate_to_supabase.py  migrate_vectors_to_supabase.py  prd.txt  regenerate_embeddings.py  run_indexer.sh  search_686c_improved.py  supabase_migrations.sql  supabase_migrations_minimal.sql  supabase_migrations_with_memory.sql  supabase_schema.sql  supabase_schema_no_rls.sql  supabase_schema_public.sql  supabase_vector_functions.sql  supabase_vector_schema.sql  test_cloud_connection.py  test_document_manager.py  test_enhanced_rag.py  test_search.py  test_specific_search.py  test_vector_search.py
src/: __init__.py  api_server.py  api_server_supabase.py  calendar_parser.py  crawler.py  image_processor.py  log_utils.py  main.py  (+2 more)
(+182 files in other folders)
